<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.10">
  <DUT Name="ST_eChillerDefaultParameters" Id="{bed90597-97d3-4996-9d3a-40865e6941a5}">
    <Declaration><![CDATA[TYPE ST_eChillerDefaultParameters :
STRUCT
	aSetPointLimitsTemperature : ARRAY[1..2] OF REAL := [10,28];
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>